<resources>
    <string name="app_name">ERTH project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to the Saudi Legacy ➝"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Don\'t have an Account Register with us!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="Full_Name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="Password">Password</string>
    <string name="Forgot">Forgot your Password?</string>
    <string name="log_in">Log in</string>
</resources>