<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="124dp"
        android:layout_height="124dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_margin="13dp"
        android:fontFamily="serif"
        android:gravity="start"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_Signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:fontFamily="serif"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/password_Signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:fontFamily="serif"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/Forgot"
        android:layout_gravity="left"
        android:textColor="@color/brown"
        android:textSize="19sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/Bbrown"
        android:text="@string/sign_in"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        android:onClick="SigninMethod"
        />

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:minHeight="48dp"
        android:onClick="registerPage"
        android:text="@string/register"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="italic"
        />
</LinearLayout>